--- a/nsm.yml
+++ b/nsm.yml
@@ -59,8 +59,8 @@
       tags: 'ecc'
 
     - name: wdl bits
-      become: true
-      become_user: "{{ecc_user}}"
+#      become: true
+#      become_user: "{{ecc_user}}"
       include: tasks/wdl_related.yml
       tags: 'wdl'
     
