--- a/tasks/nfs.yml
+++ b/tasks/nfs.yml
@@ -40,6 +40,7 @@
   ansible.posix.mount:
     path: /home/nfs
     state: unmounted
+  ignore_errors: yes
 
 
 - name: Mount /home NFS volume 
@@ -63,6 +64,7 @@
   ansible.posix.mount:
     path: /scratch
     state: unmounted
+  ignore_errors: yes
 
 
 
@@ -70,6 +72,29 @@
   ansible.posix.mount:
     src: systemfileshare.blob.core.windows.net:/systemfileshare/scratch
     path: /scratch
+    opts: sec=sys,vers=3,nolock,proto=tcp
+    state: mounted
+    fstype: nfs
+
+
+- name: mkdir /refs
+  file:
+    path: /refs
+    state: directory
+    owner: root
+    group: sysadmin
+
+- name: unmount /refs NFS volume 
+  ansible.posix.mount:
+    path: /refs
+    state: unmounted
+  ignore_errors: yes
+
+
+- name: Mount /refs NFS volume 
+  ansible.posix.mount:
+    src: systemfileshare.blob.core.windows.net:/systemfileshare/refs
+    path: /refs
     opts: sec=sys,vers=3,nolock,proto=tcp
     state: mounted
     fstype: nfs
