--- a/tasks/nfs.yml
+++ b/tasks/nfs.yml
@@ -69,12 +69,11 @@
   ignore_errors: yes
 
 
-
-- name: Mount /scratch/neuromics NFS volume 
+- name: Mount /scratch/cromwell NFS volume 
   ansible.posix.mount:
-    src: homesfileshare.file.core.windows.net:/homesfileshare/cromwell
+    src: neuromics.blob.core.windows.net:/neuromics/scratch
     path: /scratch/neuromics
-    opts: vers=4,minorversion=1,sec=sys
+    opts: sec=sys,vers=3,nolock,proto=tcp
     state: mounted
     fstype: nfs
 
@@ -94,14 +93,14 @@
   ignore_errors: yes
 
 
-
-- name: Mount /scratch/cromwell NFS volume 
+- name: Mount /scratch/neuromics NFS volume 
   ansible.posix.mount:
-    src: neuromics.blob.core.windows.net:/systemfileshare/scratch
+    src: homesfileshare.file.core.windows.net:/homesfileshare/cromwell
     path: /scratch/neuromics
-    opts: sec=sys,vers=3,nolock,proto=tcp
+    opts: vers=4,minorversion=1,sec=sys
     state: mounted
     fstype: nfs
+
 
 
 
