--- a/tasks/nfs.yml
+++ b/tasks/nfs.yml
@@ -97,7 +97,7 @@
 - name: Mount /scratch/cromwell NFS volume 
   ansible.posix.mount:
     src: homesfileshare.file.core.windows.net:/homesfileshare/cromwell
-    path: /scratch/neuromics
+    path: /scratch/cromwell
     opts: vers=4,minorversion=1,sec=sys
     state: mounted
     fstype: nfs
