install singularity as part of the nsm playbook, only one version of singularity at the time on the cluster

--- a/tasks/non_base_software.yml
+++ b/tasks/non_base_software.yml
@@ -11,3 +11,7 @@
     - name: Install go
       include_tasks:
         file: tasks/go_lang.yml
+
+    - name: Install singularity
+      include_tasks:
+        file: tasks/singularity.yml
