uid/gid mapping files for nfs client

--- a/win.yaml
+++ b/win.yaml
@@ -2,10 +2,29 @@
 
   tasks:
 
+#    - name: create groups & users
+# Enable/install a nfsclient
+# Configure nfsclient to use uid mapping to windows users.
+
+    - name: Install software via Chocolatey (community.chocolatey.org)
+      win_chocolatey:
+        name: 
+        - mobaxterm
+        - putty
+        state: present
+
+
+
     - name: Create local group to contain new users
       win_group:
         name: Neuromics
         description: The neuromics research group
+
+
+    
+
+      https://download.mobatek.net/2202022022680737/MobaXterm_Installer_v22.0.zip
+
 
 
     - name: Create local user
@@ -20,3 +39,14 @@
         password: Password1
       - name: User2
         password: Password2
+
+    - name: deploy user-list for nfs
+      ansible.windows.win_template:
+       src: templates/windows/passwd.j2
+       dest: C:\windows\system32\drivers\etc\passwd
+       
+    
+    - name: deploy user-list for nfs
+      ansible.windows.win_template:
+       src: templates/windows/group.j2
+       dest: C:\windows\system32\drivers\etc\group
